<resources>
    <string name="base_url">https://api-prova-cedro.herokuapp.com/api/v2/</string>
    <string name="app_name">prova-cedro</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_url">Site</string>
    <string name="prompt_save">Salvar</string>
    <string name="action_sign_in">Login</string>
    <string name="action_forgot_password">Recuperar a senha</string>
    <string name="action_register">Criar conta</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_password">This password is empty</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="internal_error">Aconteceu um erro interno, tente novamente mais tarde!</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to register -->
    <string name="prompt_name">Nome</string>
    <string name="bt_action_register">Registrar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_sucess_register">Registered user successfully</string>

    <!-- Main Activity Header -->
    <string name="header_title">Favoritos</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="menu_action_edit_title">Edit</string>
    <!-- bottom sheet-->
    <string name="bottom_sheet_header_title">Add</string>
    <string name="bottom_sheet_header_title_edit">Edit</string>

    <string name="bottom_sheet_prompt_url_error">Invalid Url</string>
    <string name="bottom_sheet_prompt_email_error">Invalid email</string>
    <string name="bottom_sheet_prompt_password_error">Invalid password</string>


    <!-- dialog -->
    <string name="alert_dialog_title">Delete</string>
    <string name="alert_dialog_message">Do you really want to delete the items ?</string>
    <string name="hometitle">Home</string>
    <string name="action_back_app">Tap back button agin to exit</string>
    <string name="nav_header_message">Welcome</string>
    <string name="action_logout">Logout</string>
    <string name="action_github">Github</string>
    <string name="aler_logout">Logout</string>
    <string name="aler_logout_message">Do you really want to log out of your account?</string>

</resources>
