<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg_layout_gradient">


    <TextView android:text="@string/action_register"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/text_light"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:id="@+id/textView3"
              android:textSize="24sp" android:fontFamily="sans-serif" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toTopOf="@+id/linearLayout3"/>

    <ProgressBar android:id="@+id/register_progress"
                 style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:elevation="2dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:orientation="vertical"
                  android:layout_marginStart="50dp"
                  android:layout_marginEnd="50dp"
                  android:layout_marginBottom="100dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toTopOf="parent"
                  android:id="@+id/linearLayout3"
                  android:focusable="true"
                  android:focusableInTouchMode="true">


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_bg_gradient_start_color">

            <AutoCompleteTextView
                    android:id="@+id/register_name"
                    android:background="@drawable/register_ed_background"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_name"
                    android:inputType="textPersonName"
                    android:gravity="center"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:textColor="@color/login_bg_gradient_end_color"
                    android:nextFocusUp="@id/password"
                    android:nextFocusLeft="@id/password"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_bg_gradient_start_color">

            <AutoCompleteTextView
                    android:id="@+id/register_email"
                    android:background="@drawable/register_ed_background"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:textColor="@color/login_bg_gradient_end_color"
                    android:nextFocusUp="@id/password"
                    android:nextFocusLeft="@id/password"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_input_password"
                tools:layout_editor_absoluteY="56dp"
                android:textColorHint="@color/login_bg_gradient_start_color">


            <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:background="@drawable/register_ed_background"
                    android:imeActionId="6"
                    android:textColor="@color/login_bg_gradient_end_color"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="55dp"
                android:text="@string/bt_action_register"
                android:textColor="@color/text_light"
                android:fontFamily="sans-serif"
                style="@style/RegisterButtonStyle"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>