<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp"
>


    <View android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/login_bg"
          android:id="@+id/view"
          android:alpha="0.3"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:background="@drawable/login_bg_layout_gradient" android:id="@+id/linearLayout">


    </RelativeLayout>

    <TextView
            android:text="@string/action_forgot_password"
            android:layout_width="wrap_content"
            android:textColor="@color/text_light"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
    />
    <RelativeLayout
            android:id="@+id/action_register"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:background="@color/bottom_box_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="120dp"
                      android:layout_height="35dp"
                      android:layout_centerInParent="true"
                      android:gravity="center">

            <TextView
                    android:text="@string/action_register"
                    android:textColor="@color/text_light"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/login_bg_gradient_end_color"
            app:cornerRadius="19dp"
            android:fontFamily="sans-serif"
            android:backgroundTint="@color/text_light"
            android:text="@string/action_sign_in"
            android:textStyle="bold" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"/>
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/action_register"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/linearLayout"
            android:elevation="2dp"/>
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/email_sign_in_button"
            android:focusable="true"
            android:focusableInTouchMode="true" android:id="@+id/linearLayout2">
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_email"
                android:layout_width="match_parent"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/text_light"
                android:textColorHint="@color/text_light">

            <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:text="joaofgz@hotmail.com"
                    android:inputType="textEmailAddress"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:textColor="@color/text_light"
                    android:imeOptions="actionNext"
                    android:nextFocusUp="@id/password"
                    android:nextFocusLeft="@id/password"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_input_password"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:boxStrokeColor="@color/text_light"
                tools:layout_editor_absoluteY="56dp"
                android:textColorHint="@color/text_light">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:text="senhaCedro@234"
                    android:maxLines="1"
                    android:textColor="@color/text_light"
                    android:gravity="center_horizontal"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>